--- a/contact.html
+++ b/contact.html
@@ -67,6 +67,7 @@
     <!-- End Menu -->
 
 
+    <!-- Start Main -->
     <div id="contact-main">
         <main>  
             <!-- change the form action to your script url -->
