dconfigure work page

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
         <ul class="menu-nav">
             <li class="nav-item "><a href="index.html"><img src="./img/icons-png/planet3.svg" /><span>Home</span></a></li>
             <li class="nav-item current"><a href="about.html"><img src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
-            <li class="nav-item"><a href="work.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
+            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
             <li class="nav-item"><a href="contact.html"><img src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
