--- a/works.html
+++ b/works.html
@@ -62,7 +62,7 @@
             </li>
             <li class="nav-item"><a href="about.html"><img src="./img/icons-png/planet5.svg" /><span>About</span></a>
             </li>
-            <li class="nav-item current"><a href="work.html"><img
+            <li class="nav-item current"><a href="works.html"><img
                         src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
             <li class="nav-item"><a href="contact.html"><img
                         src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
