--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&display=swap" rel="stylesheet">
-    <title>Mhmd Fathi | Portofolio</title>
+    <title>Mhmd Fathi | Portfolio</title>
 </head>
 
 <body id="about" class="theme light-theme">
