adjust menu media query for mobile

--- a/works.html
+++ b/works.html
@@ -70,7 +70,7 @@
     </nav>
     <!-- End Menu -->
 
-    <main id='main-works'>
+    <main id='works-main'>
         <h1 class="lg-heading">my <span>fire</span>works</h1>
         <h2 class="sm-heading">
             Check out some of my projects..
