config contact me page

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             <li class="nav-item current"><a href="index.html"><img src="./img/icons-png/planet3.svg" /><span>Home</span></a></li>
             <li class="nav-item"><a href="about.html"><img src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
             <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
-            <li class="nav-item"><a href="contact.html"><img src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
+            <li class="nav-item"><a href="contact-me.html"><img src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
     <!-- End Menu -->
