--- a/contact-me.html
+++ b/contact-me.html
@@ -65,7 +65,7 @@
             </li>
             <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a>
             </li>
-            <li class="nav-item current"><a href="contact.html"><img
+            <li class="nav-item current"><a href="contact-me.html"><img
                         src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
