--- a/works.html
+++ b/works.html
@@ -64,7 +64,7 @@
             </li>
             <li class="nav-item current"><a href="works.html"><img
                         src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
-            <li class="nav-item"><a href="contact.html"><img
+            <li class="nav-item"><a href="contact-me.html"><img
                         src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
