--- a/about.html
+++ b/about.html
@@ -104,7 +104,7 @@
             </div>
             <div class="exp">
                 <h4 class="exp-title"><strong>B. E., Mechatronics, Future University (FUE)</strong></h4>
-                <p> "Mechatronics, is a multidisciplinary is a combination of robotics,
+                <p> "Mechatronics, a multidisciplinary branch of engineering, it is a combination of robotics,
                     electronics, computer, telecommunications, systems, control, and product engineering." ~ Wikibedia
                 </p>
             </div>
