--- a/works.html
+++ b/works.html
@@ -123,7 +123,7 @@
                 </a>
             </li> -->
 
-            <li class="item angular django">
+            <!-- <li class="item angular django">
                 <a href="https://github.com/mofath/eCommerce--Django-Angular" target="_blank">
                     <div class="project-img">
                         <img src="img/projects/django-angular-proj.jpg">
@@ -136,7 +136,7 @@
                         <span class="category">Django / Angular</span>
                     </div>
                 </a>
-            </li>
+            </li> -->
 
             <li class="item js">
                 <a href="https://github.com/mofath/Space-Invaders--vanila-javaScript" target="_blank">
