--- a/works.html
+++ b/works.html
@@ -108,7 +108,7 @@
                 </a>
             </li>
 
-            <!-- <li class="item react node">
+            <li class="item react node">
                 <a href="https://github.com/mofath/eCommerce-full--MERN-Redux" target="_blank">
                     <div class="project-img">
                         <img src="img/projects/ecommerce-mern.png">
@@ -121,7 +121,7 @@
                         <span class="category">React / Node</span>
                     </div>
                 </a>
-            </li> -->
+            </li>
 
             <li class="item angular django">
                 <a href="https://github.com/mofath/eCommerce--Django-Angular" target="_blank">
