--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </nav>
     <!-- End Menu -->
 
-
+    <!-- Start Main -->
     <main id="about-main">
         <h1 class="lg-heading">about <span>me</span></h1>
         <h2 class="sm-heading">A little about me...</h2>
@@ -111,6 +111,7 @@
         </div>
 
     </main>
+    <!-- End Main -->
 
     <footer>
         Copyrights &copy; 2020
