adjust mobile small mobiles screen

--- a/about.html
+++ b/about.html
@@ -40,17 +40,19 @@
         <div class="menu-branding">
             <div class="prtorait"> </div>
             <h3 class="sm-heading">mohamed.elgaedi@gmail.com</h3>
+
             <div class="icons">
-                <a href="https://www.youtube.com/channel/UCabn1nY69AQL45l_wlPu9fQ?view_as=subscriber"  target="_blank" >
+                <a href="https://www.youtube.com/channel/UCabn1nY69AQL45l_wlPu9fQ?view_as=subscriber" target="_blank">
                     <i class="fa fa-youtube fa-2x "></i>
                 </a>
-                <a href="https://www.linkedin.com/in/mohamed-fathi-806201196/"  target="_blank">
+                <a href="https://www.linkedin.com/in/mohamed-fathi-806201196/" target="_blank">
                     <i class="fa fa-linkedin-square fa-2x"></i>
                 </a>
                 <a href="https://github.com/mofath" target="_blank">
                     <i class="fa fa-github fa-2x"></i>
                 </a>
-                <a href="https://drive.google.com/file/d/1eyUlTLaOBrRBFb3T11rCgWExbXJ8gOr7/view?usp=sharing"  target="_blank">
+                <a href="https://drive.google.com/file/d/1eyUlTLaOBrRBFb3T11rCgWExbXJ8gOr7/view?usp=sharing"
+                    target="_blank">
                     <i class="fa fa-download fa-2x"></i>
                 </a>
             </div>
@@ -58,65 +60,101 @@
         </div>
 
         <ul class="menu-nav">
-            <li class="nav-item "><a href="index.html"><img src="./img/icons-png/planet3.svg" /><span>Home</span></a></li>
-            <li class="nav-item current"><a href="about.html"><img src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
-            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
-            <li class="nav-item"><a href="contact-me.html"><img src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
+            <li class="nav-item "><a href="index.html"><img src="./img/icons-png/planet3.svg" /><span>Home</span></a>
+            </li>
+            <li class="nav-item current"><a href="about.html"><img
+                        src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
+            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a>
+            </li>
+            <li class="nav-item"><a href="contact-me.html"><img
+                        src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
     <!-- End Menu -->
 
     <!-- Start Main -->
     <main id="about-main">
-        <h1 class="lg-heading">about <span>me</span></h1>
+        <h1 class="lg-heading">About <span>me</span></h1>
         <h2 class="sm-heading">A little about me...</h2>
 
         <div class="info">
             <img src="img/portrait.jpg" class="bio-img">
 
             <div class="bio">
-                <h3 class="title">BIO</h3>
-                <h5 class="sub-title">full stack developer</h5>
-                <p>
-                    Dynamic and devoted full stack developer seeking.&nbsp; Always keep an eye on quality, performance 
-                    and details not only get things work. I’m also focused and always looking for new challenges 
-                    that could push my career forward satisfy my desire for learning and gaining new skills.
+                <h3 class="sub-title">BIO</h3>
+                <p class="text">
+                    Dynamic and devoted full stack developer, looking for new challenges that could push my career
+                    forward and satisfy my desire for learning and gaining new skills. I’m also focused and always keep an
+                    eye on quality, performance and details, not only get things work
                 </p>
             </div>
 
-            <div class="exp">
-                <h4 class="exp-title"><strong>9-Months Sholarship, ITI, Open Source Dep.</strong></h4>
-                <p>Intensive training program: concerned with web development,
-                    Networking, security, cloud.
-                </p>
-                <div class="break"></div>
-                <p>
-                    Main Courses: Java, Python (django), Node.js (Express.js), JavaScript (React.js, React native, AngularJS)
-                    , C, C++ and RedHat Admin I & II.
-                </p>
+
+            <div class="experience">
+                 <h2>Experience</h2>
+                <div class="timeline">
+                    <div class="timeline-body">
+                        <div class="timeline-item">
+                            <div class="content">
+                                <p class="time"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;2020</p>
+                                <h4 class="title"><strong>9-Months Sholarship, ITI, Open Source Dep.</strong></h4>
+                                <p class="text">Intensive training program in IoT Application Development: 
+                                    concerned with Web Development, Networking, Security and Cloud.
+                                </p>
+                                <div class="break"></div>
+                                <p class="exp-text">
+                                   I have developed multiple web/desktop application during my training at ITI, using
+                                   different technologies: Java, Python (django), Node.js (Express.js), JavaScript (React.js, React native, AngularJS), C, C++. 
+                                   But I more concrened with full stack web developement using React/Node. Also have studied RedHat Admin I & II.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="timeline-body">
+                        <div class="timeline-item">
+                            <div class="content">
+                                <p class="time"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;2018</p>
+                                <h4 class="title"><strong>Tech-startup program, NTI</strong></h4>
+                                <p class="text">Content: Web development, Digital Marketing, Project Management, and
+                                    IoT.</p>
+                                <div class="break"></div>
+                                <p class="text"><em>Capstone project:</em> Smart Home using Node.js for server and Arduino 
+                                    as micro-controller that gets reading from some sensors and send them to the server
+                                    using MQTT protocol to actuate some actutors.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="exp">
-                <h4 class="exp-title"><strong>Tech-startup program, NTI</strong></h4>
-                <p>Content: Web development, Digital Marketing, Project Management, and IoT.
-                </p>
-                <div class="break"></div>
-                <p>Capstone project: Smart Home.</p>
-            </div>
-            <div class="exp">
-                <h4 class="exp-title"><strong>B. E., Mechatronics, Future University (FUE)</strong></h4>
-                <p> "Mechatronics, is a multidisciplinary branch of engineering, it is a combination of robotics,
-                    electronics, computer, telecommunications, systems, control, and product engineering." ~ Wikibedia
-                </p>
+
+            <div class="education">
+                <h2>Education</h2>
+                <div class="timeline">
+                    <div class="timeline-body">
+                        <div class="timeline-item">
+                            <div class="content">
+                                <p class="time"><i class="fa fa-calendar"></i>&nbsp;&nbsp;&nbsp;2017</p>
+                                <h4 class="title"><strong>B. E., Mechatronics, Future University (FUE)</strong></h4>
+                                <p class="text">
+                                    <q>Mechatronics, is a multidisciplinary branch of engineering, it is a combination of
+                                    robotics, electronics, computer, telecommunications, systems, control, and product
+                                    engineering.</q> ~ Wikibedia
+                                </p>
+                                    <div class="break"></div>
+                                <p class="text">
+                                    <em>Graduation project:</em> Automated Storage and Retrieval System (ASRS), 
+                                    a 3 degree of freedom robot that programmed using Arduino to bick items and store them at a certain loaction.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
-
     </main>
     <!-- End Main -->
 
-    <footer>
-        Copyrights &copy; 2020
-    </footer>
-    
     <script src="./js/main.js"></script>
 </body>
 
