--- a/contact-me.html
+++ b/contact-me.html
@@ -13,8 +13,7 @@
     <title>Mhmd Fathi | Portfolio</title>
 </head>
 
-<body id="about" class="theme light-theme">
-
+<body id="contact" class="theme light-theme">
     <!-- Start Header -->
     <header class="header">
         <div class="menu-toggler">
@@ -110,9 +109,6 @@
             <h1 class="text">Hire me</h1>
         </div>
     </main>
-
-
-    <footer> Copyrights &copy; 2020 </footer>
 
     <!-- Submit the Form to Google Using "AJAX" -->
     <script src="./js/main.js"></script>
