--- a/works.html
+++ b/works.html
@@ -13,7 +13,7 @@
     <title>Mhmd Fathi | Portfolio</title>
 </head>
 
-<body id="about" class="theme light-theme">
+<body id="works" class="theme light-theme">
     <!-- Start Header -->
     <header class="header">
         <div class="menu-toggler">
@@ -71,7 +71,7 @@
     <!-- End Menu -->
 
     <main id='works-main'>
-        <h1 class="lg-heading">my <span>fire</span>works</h1>
+        <h1 class="lg-heading">Port<span>folio</span></h1>
         <h2 class="sm-heading">
             Check out some of my projects..
             <div class="break"></div>
@@ -92,7 +92,6 @@
         </ul>
 
         <ul class="projects">
-
             <li class="item react node">
                 <a href="https://github.com/mofath/goodReads-clone--MERN" target="_blank">
                     <div class="project-img">
@@ -199,9 +198,6 @@
             </li>
         </ul>
     </main>
-
-
-    <footer> Copyrights &copy; 2020 </footer>
 
     <script src="./js/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.isotope/3.0.6/isotope.pkgd.min.js"></script>
