changing portfolio file name

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                 <a href="https://www.youtube.com/channel/UCabn1nY69AQL45l_wlPu9fQ?view_as=subscriber"  target="_blank" >
                     <i class="fa fa-youtube fa-2x "></i>
                 </a>
-                <a href="https://www.linkedin.com/in/mohamed-fathi-806201196/"  target="_blank">
+                <a href="https://www.linkedin.com/in/mohamed-fathi-806201196/" target="_blank">
                     <i class="fa fa-linkedin-square fa-2x"></i>
                 </a>
                 <a href="https://github.com/mofath"  target="_blank">
                     <i class="fa fa-github fa-2x"></i>
                 </a>
-                <a href="https://drive.google.com/file/d/1eyUlTLaOBrRBFb3T11rCgWExbXJ8gOr7/view?usp=sharing"  target="_blank">
+                <a href="https://drive.google.com/file/d/1eyUlTLaOBrRBFb3T11rCgWExbXJ8gOr7/view?usp=sharing" target="_blank">
                     <i class="fa fa-download fa-2x"></i>
                 </a>
             </div>
@@ -60,7 +60,7 @@
         <ul class="menu-nav">
             <li class="nav-item current"><a href="index.html"><img src="./img/icons-png/planet3.svg" /><span>Home</span></a></li>
             <li class="nav-item"><a href="about.html"><img src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
-            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a></li>
+            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Portfolio</span></a></li>
             <li class="nav-item"><a href="contact-me.html"><img src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
         </ul>
     </nav>
