--- a/about.html
+++ b/about.html
@@ -64,7 +64,7 @@
             </li>
             <li class="nav-item current"><a href="about.html"><img
                         src="./img/icons-png/planet5.svg" /><span>About</span></a></li>
-            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Works</span></a>
+            <li class="nav-item"><a href="works.html"><img src="./img/icons-png/planet6.svg" /><span>Portfolio</span></a>
             </li>
             <li class="nav-item"><a href="contact-me.html"><img
                         src="./img/icons-png/astronauts1.svg" /><span>Contact</span></a></li>
